# numba-accelerated-udfs

./: .gitignore  .pre-commit-config.yaml  .ycm_extra_conf.py  CMakeLists.txt  Dockerfile  README.md  build.sh  setup.py  test_ext.py
filigree/: __init__.py  _lib.cpp  api.py  numba_extension.py
filigree/tests/: test_lib.py
include/: filigree.hxx
notebooks/: Filigree Demo.ipynb
ptx_comparison/: build.sh  cpp.ptx  highlight_center.cu  highlight_center.py  highlight_cpp.ptx  highlight_python.ptx  ptx_comparison.cu  ptx_comparison.py  python.ptx
src/: CMakeLists.txt  filigree.cu  main.cu
